# xnote2

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  dev.sh  init.sql  prompts.md  release.sh
.claude/: settings.local.json
migration/: migrate.py
src/: main.rs
src/config/: database.rs
src/handlers/: activities.rs  activity_types.rs  daily_summary.rs  drink_options.rs  drinks.rs  events.rs  food_types.rs  locations.rs  meals.rs  mod.rs  people.rs  products.rs  recipes.rs  restaurants.rs
src/models/: activity.rs  daily_summary.rs  detail.rs  drink.rs  event.rs  location.rs  meal.rs  mod.rs  people.rs  product.rs  recipe.rs  restaurant.rs
static/: activity.html  drink-option.html  index.html  people.html  product.html  recipe.html  restaurant.html
static/css/: main.css
static/js/: activity-form.js  activity-spreadsheet.js  api-client.js  calendar.js  detail-forms.js  drink-option-form.js  drink-option-spreadsheet.js  main.js  people-form.js  people-spreadsheet.js  product-form.js  product-spreadsheet.js  recipe-form.js  recipe-spreadsheet.js  restaurant-form.js  restaurant-spreadsheet.js  spreadsheet.js  utils.js
tests/: activity_test.rs  drink_test.rs  event_test.rs  meal_details_test.rs  meal_test.rs  people_test.rs  product_test.rs  recipe_test.rs  restaurant_test.rs
